Start writing build script for ire disassembler

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 
 members = [
-    "pcode-rs", # Rust PCode Bindings
-    "ire",      # Rust implementation of angr
-    "iir",      # The IRE IR
+    "pcode-rs",         # Rust PCode Bindings
+    "ire",              # Rust implementation of angr
+    "iir",              # The IRE IR
+    "ire-disassembler", # Disassembler for IRE
 ]
